--- a/package.json
+++ b/package.json
@@ -52,5 +52,11 @@
   "browserslist": [
     "> 1%",
     "last 2 versions"
-  ]
+  ],
+  "dependencies": {
+    "bootstrap": "^4.4.1",
+    "file-include-webpack-plugin": "^1.3.5",
+    "jquery": "^3.5.0",
+    "popper.js": "^1.14.3"
+  }
 }
